--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ernesto Blanco, mis proyectos en Git Hub.
 description: Desarrollo web y legalidad digital.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https//ernestoblanco.me/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email: mail@ernestoblanco.mx
   facebook: bc.ernesto
   flickr: bc_ernesto
-  github: bcernesto/jekyll-now
+  github: bcernesto
   instagram:
   linkedin:
   pinterest:
