--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Ernesto Blanco, mis proyectos en Git Hub.
 description: Desarrollo web y legalidad digital.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https//ernestoblanco.me/images/jekyll-logo.png
+avatar: https//bcernesto.github.io/images/jekyll-logo.png
 
 #
 # Flags below are optional
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: http://ernestoblanco.me
+url: http://bcernesto.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
